[project]
name = "argon2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hacksparr0w", email = "hacksparr0w@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[dependency-groups]
dev = [
    "pyright>=1.1.388",
    "ruff>=0.7.2",
]
