[project]
name = "argon2"
version = "0.1.0"
description = "Python bindings for the excellent Argon2 password hashing function"
readme = "README.md"
authors = [
    { name = "hacksparr0w", email = "hacksparr0w@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[dependency-groups]
dev = [
    "pyright>=1.1.388",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]
